[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "z3-solver>=4.15.4.0",
    "regex>=2025.11.3",
    "networkx>=3.4.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "scipy>=1.15.3",
    "exact-cover>=1.5.0",
]
